--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>HOME|sobble</title>
+        <title>BLOG | sobble</title>
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -14,19 +14,81 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/css/styles.css" rel="stylesheet" />
+        <link href="/static/css/blog.css" rel="stylesheet" />
     </head>
     <body>
         {{ template "navigation.html" . }}
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('/static/assets/img/home-bg.jpg')">
-
+        <header class="navbar-bar" style="background-image: url('/static/assets/img/home-bg.jpg')">
         </header>
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="nav-scroller py-1 mb-2">
+            <nav class="nav d-flex justify-content-between">
+              <a class="p-2 link-secondary" href="#">World</a>
+              <a class="p-2 link-secondary" href="#">U.S.</a>
+              <a class="p-2 link-secondary" href="#">Technology</a>
+              <a class="p-2 link-secondary" href="#">Design</a>
+              <a class="p-2 link-secondary" href="#">Culture</a>
+              <a class="p-2 link-secondary" href="#">Business</a>
+              <a class="p-2 link-secondary" href="#">Politics</a>
+              <a class="p-2 link-secondary" href="#">Opinion</a>
+              <a class="p-2 link-secondary" href="#">Science</a>
+              <a class="p-2 link-secondary" href="#">Health</a>
+              <a class="p-2 link-secondary" href="#">Style</a>
+              <a class="p-2 link-secondary" href="#">Travel</a>
+            </nav>
+          </div>
+        </div>
+        <div class="row g-5">
+            <div class="col-md-8">
+                <div class="article-list">
                     <ul>
-                        for 
+                        {{ range $index, $article := .articles }}
+                            <a href="/article/{{ $article.ID }}">
+                            <li>{{ $index }}. {{ $article.Title }}</li>
+                            </a>
+                        {{ end }}
                     </ul>
+                </div>
+            </div>
+        
+            <div class="col-md-4"></div>
+              
+        </div>
+        <div class="row g-5">
+            <div class="col-md-8"></div>
+            <div class="col-md-4">
+                <div class="position-sticky" style="top: 2rem;">
+                <div class="p-4 mb-3 bg-light rounded">
+                    <h4 class="fst-italic">About</h4>
+                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                </div>
+        
+                <div class="p-4">
+                    <h4 class="fst-italic">Archives</h4>
+                    <ol class="list-unstyled mb-0">
+                    <li><a href="#">March 2021</a></li>
+                    <li><a href="#">February 2021</a></li>
+                    <li><a href="#">January 2021</a></li>
+                    <li><a href="#">December 2020</a></li>
+                    <li><a href="#">November 2020</a></li>
+                    <li><a href="#">October 2020</a></li>
+                    <li><a href="#">September 2020</a></li>
+                    <li><a href="#">August 2020</a></li>
+                    <li><a href="#">July 2020</a></li>
+                    <li><a href="#">June 2020</a></li>
+                    <li><a href="#">May 2020</a></li>
+                    <li><a href="#">April 2020</a></li>
+                    </ol>
+                </div>
+        
+                <div class="p-4">
+                    <h4 class="fst-italic">Elsewhere</h4>
+                    <ol class="list-unstyled">
+                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    </ol>
+                </div>
                 </div>
             </div>
         </div>
