--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -19,27 +19,11 @@
     <body>
         {{ template "navigation.html" . }}
         <!-- Page Header-->
-        <header class="navbar-bar" style="background-image: url('/static/assets/img/home-bg.jpg')">
-        </header>
-        <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-              <a class="p-2 link-secondary" href="#">World</a>
-              <a class="p-2 link-secondary" href="#">U.S.</a>
-              <a class="p-2 link-secondary" href="#">Technology</a>
-              <a class="p-2 link-secondary" href="#">Design</a>
-              <a class="p-2 link-secondary" href="#">Culture</a>
-              <a class="p-2 link-secondary" href="#">Business</a>
-              <a class="p-2 link-secondary" href="#">Politics</a>
-              <a class="p-2 link-secondary" href="#">Opinion</a>
-              <a class="p-2 link-secondary" href="#">Science</a>
-              <a class="p-2 link-secondary" href="#">Health</a>
-              <a class="p-2 link-secondary" href="#">Style</a>
-              <a class="p-2 link-secondary" href="#">Travel</a>
-            </nav>
-          </div>
-        </div>
-        <div class="row g-5">
-            <div class="col-md-8">
+        <!-- <header class="navbar-bar" style="background-image: url('/static/assets/img/home-bg.jpg')">
+        </header> -->
+
+        <div class="row g-5" style="margin-top: 1rem;">
+            <div class="col-md-8" style="padding-left: 8rem;">
                 <div class="article-list">
                     <ul>
                         {{ range $index, $article := .articles }}
@@ -51,7 +35,25 @@
                 </div>
             </div>
         
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="p-4">
+                <ul>
+                    <h4 class="fst-italic">Tags</h4>
+                    <a class="p-2 link-secondary" href="#">World</a>
+                    <a class="p-2 link-secondary" href="#">U.S.</a>
+                    <a class="p-2 link-secondary" href="#">Technology</a>
+                    <a class="p-2 link-secondary" href="#">Design</a>
+                    <a class="p-2 link-secondary" href="#">Culture</a>
+                    <a class="p-2 link-secondary" href="#">Business</a>
+                    <a class="p-2 link-secondary" href="#">Politics</a>
+                    <a class="p-2 link-secondary" href="#">Opinion</a>
+                    <a class="p-2 link-secondary" href="#">Science</a>
+                    <a class="p-2 link-secondary" href="#">Health</a>
+                    <a class="p-2 link-secondary" href="#">Style</a>
+                    <a class="p-2 link-secondary" href="#">Travel</a>
+                </ul>
+                </div>
+            </div>
               
         </div>
         <div class="row g-5">
@@ -62,7 +64,6 @@
                     <h4 class="fst-italic">About</h4>
                     <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
                 </div>
-        
                 <div class="p-4">
                     <h4 class="fst-italic">Archives</h4>
                     <ol class="list-unstyled mb-0">
