--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        {{ if .article.Title }}
         <title>{{ .article.Title }}</title>
+        {{ else }}
+        <title>BLOG | SOBBLE</title>
+        {{ end }}
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -87,18 +91,6 @@
         <div class="row g-5">
             <div class="col-md-8">
 
-                <!-- <article class="article-detail">
-                  {{with .article}}
-                  <h2 class="blog-post-title mb-1">{{ .Title }}</h2>
-                  <p class="blog-post-meta">{{ .UpdatedAt.Format "2006-01-02 15:04" }} <a href="#" style="text-decoration: none;">{{ .Author }}</a></p>
-                  {{ if .IsHTML }}
-                    <p>{{ .Content }}</p>
-                  {{ else }}
-                    <p>{{ .Content }}</p>
-                  {{ end }}
-
-                  {{ end }}
-                </article>   -->
                 <article class="blog-post" >
                   <!-- margin-top: 80px;
                   margin-left: 50px; -->
@@ -107,7 +99,7 @@
                   margin-left: 50px;
                   display: none;
               ">
-                    {{ .article.Content }}
+                    {{ .article.HtmlContent }}
                   </div>
                   <div style="text-align: right;">
                     <p>{{ .article.UpdatedAt.Format "2006-01-02 15:04" }} <a href="#">{{ .article.Author }}</a></p>
@@ -118,138 +110,15 @@
             </div>
         
             <div class="col-md-4">
-              <input type="button" onlick="editArticle()" value="编辑" />
+              <div style="margin-top: 100px">
+                <a href="/edit/{{ .article.ID }}">编辑文本</a>
+              </div>
+              <div>
+                <input type="button" onclick="deleteArticle()" value="删除文章" />
+              </div>
             </div>
               
         </div>
-        <!-- <div class="row g-5">
-            <div class="col-md-8">
-        
-              <article class="blog-post">
-                <h2 class="blog-post-title mb-1">Sample blog post</h2>
-                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-        
-                <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-                <hr>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h2>Blockquotes</h2>
-                <p>This is an example blockquote in action:</p>
-                <blockquote class="blockquote">
-                  <p>Quoted text goes here.</p>
-                </blockquote>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Example lists</h3>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
-                <ul>
-                  <li>First list item</li>
-                  <li>Second list item with a longer description</li>
-                  <li>Third list item to close it out</li>
-                </ul>
-                <p>And this is an ordered list:</p>
-                <ol>
-                  <li>First list item</li>
-                  <li>Second list item with a longer description</li>
-                  <li>Third list item to close it out</li>
-                </ol>
-                <p>And this is a definition list:</p>
-                <dl>
-                  <dt>HyperText Markup Language (HTML)</dt>
-                  <dd>The language used to describe and define the content of a Web page</dd>
-                  <dt>Cascading Style Sheets (CSS)</dt>
-                  <dd>Used to describe the appearance of Web content</dd>
-                  <dt>JavaScript (JS)</dt>
-                  <dd>The programming language used to build advanced Web sites and applications</dd>
-                </dl>
-                <h2>Inline HTML elements</h2>
-                <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
-                <ul>
-                  <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
-                  <li><em>To italicize text</em>, use <code class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.</li>
-                  <li>Abbreviations, like <abbr title="HyperText Markup Language">HTML</abbr> should use <code class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.</li>
-                  <li>Citations, like <cite>— Mark Otto</cite>, should use <code class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.</li>
-                  <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
-                  <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
-                </ul>
-                <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-                <h2>Heading</h2>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Sub-heading</h3>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <pre><code>Example code block</code></pre>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-              </article>
-        
-              <article class="blog-post">
-                <h2 class="blog-post-title mb-1">Another blog post</h2>
-                <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
-        
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <blockquote>
-                  <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
-                </blockquote>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h3>Example table</h3>
-                <p>And don't forget about tables in these posts:</p>
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Name</th>
-                      <th>Upvotes</th>
-                      <th>Downvotes</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Alice</td>
-                      <td>10</td>
-                      <td>11</td>
-                    </tr>
-                    <tr>
-                      <td>Bob</td>
-                      <td>4</td>
-                      <td>3</td>
-                    </tr>
-                    <tr>
-                      <td>Charlie</td>
-                      <td>7</td>
-                      <td>9</td>
-                    </tr>
-                  </tbody>
-                  <tfoot>
-                    <tr>
-                      <td>Totals</td>
-                      <td>21</td>
-                      <td>23</td>
-                    </tr>
-                  </tfoot>
-                </table>
-        
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-              </article>
-        
-              <article class="blog-post">
-                <h2 class="blog-post-title mb-1">New feature</h2>
-                <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-        
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <ul>
-                  <li>First list item</li>
-                  <li>Second list item with a longer description</li>
-                  <li>Third list item to close it out</li>
-                </ul>
-                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-              </article>
-        
-              <nav class="blog-pagination" aria-label="Pagination">
-                <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
-                <a class="btn btn-outline-secondary rounded-pill disabled">Newer</a>
-              </nav>
-        
-            </div>
-        
-            <div class="col-md-4"></div>
-              
-        </div> -->
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
@@ -290,5 +159,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/static/js/scripts.js"></script>
+        <script>
+          function deleteArticle() {
+            fetch("/article/delete", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.Stringify({
+                "id": "{{ .article.ID }}",
+              })
+            })
+            .then(response => callback(response))
+
+          }
+          function callback(response) {
+            
+          }
+          
+        </script>
     </body>
 </html>
