--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -16,58 +16,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-        <!-- <style>
-            .bd-placeholder-img {
-              font-size: 1.125rem;
-              text-anchor: middle;
-              -webkit-user-select: none;
-              -moz-user-select: none;
-              user-select: none;
-            }
-      
-            @media (min-width: 768px) {
-              .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-              }
-            }
-      
-            .b-example-divider {
-              height: 3rem;
-              background-color: rgba(0, 0, 0, .1);
-              border: solid rgba(0, 0, 0, .15);
-              border-width: 1px 0;
-              box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-            }
-      
-            .b-example-vr {
-              flex-shrink: 0;
-              width: 1.5rem;
-              height: 100vh;
-            }
-      
-            .bi {
-              vertical-align: -.125em;
-              fill: currentColor;
-            }
-      
-            .nav-scroller {
-              position: relative;
-              z-index: 2;
-              height: 2.75rem;
-              overflow-y: hidden;
-            }
-      
-            .nav-scroller .nav {
-              display: flex;
-              flex-wrap: nowrap;
-              padding-bottom: 1rem;
-              margin-top: -1px;
-              overflow-x: auto;
-              text-align: center;
-              white-space: nowrap;
-              -webkit-overflow-scrolling: touch;
-            }
-          </style> -->
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/css/styles.css" rel="stylesheet" />
         <link href="/static/css/blog.css" rel="stylesheet" />
@@ -84,7 +33,6 @@
             content.style.display = "";
           }
           function editArticle() {
-        
             window.location = "http://localhost:8888/editor"
           }
         </script>
@@ -104,7 +52,20 @@
                   <div style="text-align: right;">
                     <p>{{ .article.UpdatedAt.Format "2006-01-02 15:04" }} <a href="#">{{ .article.Author }}</a></p>
                   </div>
+                  <div>
+                    <div>
+                      <!-- <button onclick="previous()">上一页</button>
+                      <button onclick="next()">下一页</button> -->
+                      {{ if .previous }}
+                        <a href="/article/{{ .previous }}">上一页</a>
+                      {{ end }}
+                      <a href="/article/list">目录</a>
+                      {{ if .next }} 
+                        <a href="/article/{{ .next }}">下一页</a>
+                      {{ end }}
+                    </div>
 
+                  </div>
                 </article>
                 
             </div>
@@ -114,7 +75,8 @@
                 <a href="/edit/{{ .article.ID }}">编辑文本</a>
               </div>
               <div>
-                <input type="button" onclick="deleteArticle()" value="删除文章" />
+                <!-- <input type="button" onclick="deleteArticle()" value="删除文章" /> -->
+                <button onclick="deleteArticle()">删除文章</button>
               </div>
             </div>
               
@@ -166,7 +128,7 @@
               headers: {
                 "Content-Type": "application/json",
               },
-              body: JSON.Stringify({
+              body: JSON.stringify({
                 "id": "{{ .article.ID }}",
               })
             })
@@ -174,8 +136,20 @@
 
           }
           function callback(response) {
-            
+            console.log(response)
+            if (response.redirected) {
+              alert("删除成功")
+              window.location.href = response.url
+            }
+
           }
+
+          // function Previous() {
+          //   if ("{{ .previous }}") {
+          //     window.location.href = "/article" + "{{ .previous }}"
+          //   }
+
+          // }
           
         </script>
     </body>
