--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -2,9 +2,12 @@
     <head>
 	<title>vditor文本</title>
      <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
+     <link href="/static/css/styles.css" rel="stylesheet" />
+     <link href="/static/css/blog.css" rel="stylesheet" />
     <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
     </head>    
     <body>
+
         <!-- <input type="button" onclick="setContent()" value="确定" /> -->
         <div id="vditor" style="margin-top:25px">
         </div>
