--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -53,17 +53,6 @@
                     <a class="p-2 link-secondary" href="#">Travel</a>
                 </ul>
                 </div>
-            </div>
-              
-        </div>
-        <div class="row g-5">
-            <div class="col-md-8"></div>
-            <div class="col-md-4">
-                <div class="position-sticky" style="top: 2rem;">
-                <div class="p-4 mb-3 bg-light rounded">
-                    <h4 class="fst-italic">About</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-                </div>
                 <div class="p-4">
                     <h4 class="fst-italic">Archives</h4>
                     <ol class="list-unstyled mb-0">
@@ -81,11 +70,23 @@
                     <li><a href="#">April 2020</a></li>
                     </ol>
                 </div>
+            </div>
+              
+        </div>
+        <div class="row g-5">
+            <div class="col-md-8"></div>
+            <div class="col-md-4">
+                <div class="position-sticky" style="top: 2rem;">
+                <div class="p-4 mb-3 bg-light rounded">
+                    <h4 class="fst-italic">About</h4>
+                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                </div>
+
         
                 <div class="p-4">
                     <h4 class="fst-italic">Elsewhere</h4>
                     <ol class="list-unstyled">
-                    <li><a href="#">GitHub</a></li>
+                    <li><a href="https://github.com/poisonyu/">GitHub</a></li>
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Facebook</a></li>
                     </ol>
@@ -116,7 +117,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://github.com/poisonyu/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
