--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -1,17 +1,36 @@
 <html>
     <head>
-	<title>vditor文本</title>
-     <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
-     <link href="/static/css/styles.css" rel="stylesheet" />
-     <link href="/static/css/blog.css" rel="stylesheet" />
-    <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
+        <title>vditor文本</title>
+        <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
+        <link href="/static/css/styles.css" rel="stylesheet" />
+        <link href="/static/css/blog.css" rel="stylesheet" />
+        <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
+ 
     </head>    
     <body>
 
         <!-- <input type="button" onclick="setContent()" value="确定" /> -->
         <div id="vditor" style="margin-top:25px">
         </div>
-        <input type="button" onclick="saveContent()" value="保存" />
-        <script src="/static/js/article/edit.js"></script>
+        <!-- <input type="button" onclick="saveContent()" value="保存" /> -->
+        <button id="edit" articleid="{{ .article.ID }}">保存</button>
+        <script src="/static/js/article/edit.js"></script> 
+        <script>
+            window.onload = function() {
+                vditor = new Vditor(document.getElementById('vditor'), {
+                    // placeholder: "placeholder",
+                    height: window.innerHeight - 40,
+                    lang: "zh_CN",
+                    value: "{{ .article.MdContent }}",
+                    cache: {
+                        enable: false
+                    },
+                    "mode": "sv",
+                    "preview": {
+                        "mode": "both"
+                    }
+                });
+            }
+        </script>
     </body>
 </html>
