--- a/static/css/user/login.css
+++ b/static/css/user/login.css
@@ -83,7 +83,7 @@ Also note that  ***/
     font-family: 'Raleway', sans-serif;
     background-size: cover;
     min-height: 100vh;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
 }
