--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,51 +1,46 @@
 {{ define "navigation.html" }}
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="/">Sobble</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/article/list">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="">Sample Post</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="">Contact</a></li>
-                        {{ if .isLogin }}
-                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="">Log out</a></li> -->
-                        <li class="nav-item"></li><button onclick="logout()">Log out</button></li>
-                        {{ else }}
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/user/signin">Log in</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/user/signup">Register</a></li>
-                        {{ end }}
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <div class="container-fluid">
+        <a href="/" class="navbar-brand">
+            <!-- <img src="/static/assets/img/1200px-Sobble.png" alt="Logo" style="width:40px;"> -->
+            SOBBLE
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggle-icon">菜单</span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a href="/" class="nav-link active">主页</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/article/list" class="nav-link">博客</a>
+                </li>
+                {{ if .isLogin }}
+                <!-- <li class="nav-item"><button onclick="logout()">Log out</button></li> -->
+                <li class="nav-item"><a href="#" class="nav-link" role="button" id="logout">退出登录</a></li>
+                <li class="nav-item dropdown">
+                    <a href="" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">下拉菜单</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/user/info" class="dropdown-item">个人信息</a></li>
+                        <li><a href="#" class="dropdown-item">退出登录</a></li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-        <script>
-            function getCookie(name) {
-                let cookieArr = document.cookie.split(";");
+                </li>
+                {{ else }}
+                <li class="nav-item"><a class="nav-link" href="/user/signin">登录</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user/signup">注册</a></li>
+                {{ end }}
 
-                for (let i = 0; i < cookieArr.length; i++) {
-                    let cookiePair = cookieArr[i].split("=");
-                    if (name == cookiePair[0].trim()) {
-                        return cookiePair[1];
-                    }
-                }
-                return null;
-            }
-
-            function logout() {
-                let token = getCookie("jwt-token");
-                let d = new Date();
-                d.setTime(d.getTime() - 1);
-                let expireTime = d.toGMTString()
-                document.cookie = "jwt-token=" + token + ";expires=" + expireTime + ";path=/"
-                window.location.href = "/"
-            }
-        </script>
+            </ul>
+            <form action="#" class="d-flex ms-auto">
+                <input type="text" class="form-control me-2" placeholder="Search">
+                <button class="btn btn-primary" type="button">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<script src="/static/js/navigation.js"></script>
 
 {{ end }}
