--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Cn">
+<html lang="zh-CN">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,108 +11,63 @@
         <title>BLOG | SOBBLE</title>
         {{ end }}
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/static/css/styles.css" rel="stylesheet" />
-        <link href="/static/css/blog.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         {{ template "navigation.html" . }}
-        <!-- <header class="navbar-bar" style="background-image: url('/static/assets/img/home-bg.jpg')">
-        </header> -->
 
-        <div class="row g-5">
-            <div class="col-md-8">
-                <article class="blog-post" >
-                  <!-- margin-top: 80px;
-                  margin-left: 50px; -->
-                  <div id="content" style="
-                  margin-top: 80px;
-                  margin-left: 50px;
-                  display: none;
-              ">
-                    {{ .article.HtmlContent }}
-                  </div>
-                  <div style="text-align: right;">
-                    <p>{{ .article.UpdatedAt.Format "2006-01-02 15:04" }} <a href="#">{{ .article.Author }}</a></p>
-                  </div>
-                  <div>
-                    <div>
-                      <!-- <button onclick="previous()">上一页</button>
-                      <button onclick="next()">下一页</button> -->
-                      {{ if .previous }}
-                        <a href="/article/{{ .previous }}">上一页</a>
-                      {{ end }}
-                      <a href="/article/list">目录</a>
-                      {{ if .next }} 
-                        <a href="/article/{{ .next }}">下一页</a>
-                      {{ end }}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <article class="blog-post" >
+                    <div id="content" style="
+                    margin-top: 40px;
+                    display: none;
+                ">
+                        {{ .article.HtmlContent }}
                     </div>
+                    <div style="text-align: right;">
+                        <p>{{ .article.UpdatedAt.Format "2006-01-02 15:04" }} <a class="text-decoration-none" href="#">{{ .article.Author }}</a></p>
+                    </div>
+                    <div>
+                        <div>
+                            <!-- pagination -->
+                            <ul class="pagination pagination-md justify-content-center">
+                                {{ if .previous }}
+                                <li class="page-item"><a href="/article/{{ .previous }}" class="page-link">上一页</a></li>
+                                {{ else }}
+                                <li class="page-item disabled"><a href="/article/{{ .previous }}" class="page-link">上一页</a></li>
+                                {{ end }}
 
-                  </div>
-                </article>
-                
+                                <li class="page-item active"><a href="#" class="page-link">1</a></li>
+
+                                <li class="page-item"><a href="/article/list" class="page-link">目录</a></li>
+
+                                {{ if .next }}
+                                <li class="page-item"><a href="/article/{{ .next }}" class="page-link">下一页</a></li>
+                                {{ else }}
+                                <li class="page-item disabled"><a href="/article/{{ .next }}" class="page-link">下一页</a></li>
+                                {{ end }}
+                            </ul>
+                        </div>
+                    </div>
+                    </article>
+                </div>
+                <div class="col-md-1"></div>
+            <br>
             </div>
-        
-            <div class="col-md-4">
-              <div style="margin-top: 100px">
-                <a href="/edit/{{ .article.ID }}">编辑文本</a>
-              </div>
-              <div>
+            <div style="margin-top: 100px">
+                <a href="/edit/{{ .article.ID }}" role="button">编辑文本</a>
+            </div>
+            <div>
                 <!-- <input type="button" onclick="deleteArticle()" value="删除文章" /> -->
                 <button id="delete" articleid="{{ .article.ID }}">删除文章</button>
                 <!-- <button articleid="{{ .article.ID }}" onclick="deleteArticle()">删除文章</button> -->
-              </div>
             </div>
-            <script src="/static/js/article/detail.js"></script>
-            <!-- <script>
-
-            </script> -->
         </div>
-        <!-- Footer-->
-        <footer class="border-top">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="/static/js/scripts.js"></script>
+
+        <script src="/static/js/article/detail.js"></script>
     </body>
 </html>
