--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Cn">
+<html lang="zh-CN">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -7,124 +7,68 @@
         <meta name="author" content="" />
         <title>BLOG | sobble</title>
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/static/css/styles.css" rel="stylesheet" />
-        <link href="/static/css/blog.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         {{ template "navigation.html" . }}
-        <!-- Page Header-->
-        <!-- <header class="navbar-bar" style="background-image: url('/static/assets/img/home-bg.jpg')">
-        </header> -->
 
-        <div class="row g-5" style="margin-top: 1rem;">
-            <div class="col-md-8" style="padding-left: 8rem;">
-                <div class="article-list">
-                    <ul>
-                        {{ range $index, $article := .articles }}
-                            <a href="/article/{{ $article.ID }}">
-                            <li>{{ $index }}. {{ $article.Title }}</li>
-                            </a>
-                        {{ end }}
-                    </ul>
-                </div>
-            </div>
-        
-            <div class="col-md-4">
-                <div class="p-4">
-                <ul>
-                    <h4 class="fst-italic">Tags</h4>
-                    <a class="p-2 link-secondary" href="#">World</a>
-                    <a class="p-2 link-secondary" href="#">U.S.</a>
-                    <a class="p-2 link-secondary" href="#">Technology</a>
-                    <a class="p-2 link-secondary" href="#">Design</a>
-                    <a class="p-2 link-secondary" href="#">Culture</a>
-                    <a class="p-2 link-secondary" href="#">Business</a>
-                    <a class="p-2 link-secondary" href="#">Politics</a>
-                    <a class="p-2 link-secondary" href="#">Opinion</a>
-                    <a class="p-2 link-secondary" href="#">Science</a>
-                    <a class="p-2 link-secondary" href="#">Health</a>
-                    <a class="p-2 link-secondary" href="#">Style</a>
-                    <a class="p-2 link-secondary" href="#">Travel</a>
-                </ul>
-                </div>
-                <div class="p-4">
-                    <h4 class="fst-italic">Archives</h4>
-                    <ol class="list-unstyled mb-0">
-                        {{ range $index, $date := .archiveDate }}
-                        <li><a href="#">{{ $date.Format "Jan 2006" }}</a></li>
-                        {{ end }}
-                    <!-- <li><a href="#">March 2021</a></li> -->
-                    </ol>
-                </div>
-            </div>
-              
-        </div>
-        <div class="row g-5">
-            <div class="col-md-8"></div>
-            <div class="col-md-4">
-                <div class="position-sticky" style="top: 2rem;">
-                <div class="p-4 mb-3 bg-light rounded">
-                    <h4 class="fst-italic">About</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-                </div>
-
-        
-                <div class="p-4">
-                    <h4 class="fst-italic">Elsewhere</h4>
-                    <ol class="list-unstyled">
-                    <li><a href="https://github.com/poisonyu/">GitHub</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    </ol>
-                </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer-->
-        <footer class="border-top">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="article-list p-4">
+                        <ul style="list-style-type: auto;">
+                            {{ range $index, $article := .articles }}
+                            <li>
+                                <a class="text-decoration-none" href="/article/{{ $article.ID }}">{{ $article.Title }}</a>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://github.com/poisonyu/">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
+                            {{ end }}
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="p-4">
+                        <h4 class="fst-italic">Tags</h4>
+                        <ul>
+                            <a class="p-2 link-secondary" href="#">World</a>
+                            <a class="p-2 link-secondary" href="#">Culture</a>
+                            <a class="p-2 link-secondary" href="#">Business</a>
+                            <a class="p-2 link-secondary" href="#">Style</a>
+                            <a class="p-2 link-secondary" href="#">Travel</a>
+                        </ul>
+                    </div>
+                    <div class="p-4">
+                        <h4 class="fst-italic">Archives</h4>
+                        <ul class="list-unstyled mb-0">
+                            {{ range $index, $date := .archiveDate }}
+                            <li><a href="#">{{ $date.Format "Jan 2006" }}</a></li>
+                            {{ end }}
+                        <!-- <li><a href="#">March 2021</a></li> -->
+                        </ul>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="/static/js/scripts.js"></script>
+
+            <div class="row g-5">
+                <div class="col-md-8"></div>
+                <div class="col-md-4">
+                    <div class="position-sticky" style="top: 2rem;">
+                    <div class="p-4 mb-3 bg-light rounded">
+                        <h4 class="fst-italic">About</h4>
+                        <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                    </div>
+        
+                    <div class="p-4">
+                        <h4 class="fst-italic">Elsewhere</h4>
+                        <ol class="list-unstyled">
+                        <li><a href="https://github.com/poisonyu/">GitHub</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        </ol>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
