--- a/templates/create_article.html
+++ b/templates/create_article.html
@@ -1,31 +1,31 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
 <html>
     <head>
-	<title>vditor编辑器</title>
-     <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
-    <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
+        <title>vditor编辑器</title>
+        <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
+        <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>    
     <body>
-        <!-- {{ template "editor.html" . }} -->
-        <!-- <input type="button" onclick="setContent()" value="确定" /> -->
-        <!-- <div>
-            Title:<br>
-            <input type="text" name="title">
+        {{ template "navigation.html" . }}
+        <div class="container">
+
+            <label for="title">标题：</label><br>
+            <input type="text" id="title" name="title">
             <br>
-            Type:<br>
-            <input type="text" name="type">
-            可以不填
-        </div> -->
-        <div>
-        <label for="title">标题：</label><br>
-        <input type="text" id="title" name="title">
-        <br>
-        <label for="tag">Type:</label><br>
-        <input type="text" id="tag" name="type">
-        <br>
+            <label for="tag">Type:</label><br>
+            <input type="text" id="tag" name="type">
+            <br>
+
+            <div id="vditor" style="margin-top:25px">
+            </div>
+            <input type="button" onclick="saveContent()" value="保存" />
+            <script src="/static/js/article/create.js"></script>
         </div>
-        <div id="vditor" style="margin-top:25px">
-        </div>
-        <input type="button" onclick="saveContent()" value="保存" />
-        <script src="/static/js/article/create.js"></script>
     </body>
 </html>
