--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -1,19 +1,25 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <title>vditor文本</title>
         <link rel="stylesheet" href="https://unpkg.com/vditor/dist/index.css" />
-        <link href="/static/css/styles.css" rel="stylesheet" />
-        <link href="/static/css/blog.css" rel="stylesheet" />
         <script src="https://unpkg.com/vditor/dist/index.min.js"></script>
- 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+
     </head>    
     <body>
-
-        <!-- <input type="button" onclick="setContent()" value="确定" /> -->
-        <div id="vditor" style="margin-top:25px">
+        {{ template "navigation.html" .}}
+        <div class="container">
+            <!-- <input type="button" onclick="setContent()" value="确定" /> -->
+            <div id="vditor" style="margin-top:25px">
+            </div>
+            <button id="edit" articleid="{{ .article.ID }}">保存</button>
         </div>
-        <!-- <input type="button" onclick="saveContent()" value="保存" /> -->
-        <button id="edit" articleid="{{ .article.ID }}">保存</button>
         <script src="/static/js/article/edit.js"></script> 
         <script>
             window.onload = function() {
