--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="zh-Cn">
+<html lang="zh-CN">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>HOME | sobble</title>
+        <title>登录 | sobble</title>
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
         <link href="/static/css/user/login.css" rel="stylesheet" />
-        
     </head>
 
     <body>
-        <div class="form" id="loginform">
+        {{ template "navigation.html" . }}
+        <div class="container form" id="loginform">
             <h1> Login </h1>
             <form novalidate>
                 <p class="username">
