--- a/templates/pic.html
+++ b/templates/pic.html
@@ -15,6 +15,10 @@
     <div class="random">
         <img class="img-random" src="{{.url}}">
     </div>
-    
+    <div class="random container" >
+        <div class="col-md-6">
+            <img class="img-random" src="{{.url}}">
+        </div>
+    </div>
 </body>
 </html>
