--- a/templates/info.html
+++ b/templates/info.html
@@ -51,7 +51,7 @@
                                         <input type="text" class="form-control" id="emailvalidation" placeholder="电子邮件验证码">
                                     </div>
                                     <div class="col-auto">
-                                        <button type="button" class="btn btn-info" id="">发送验证码</button>
+                                        <button type="button" class="btn btn-info" id="verification">发送验证码</button>
                                     </div>
                                     <!-- <div class="mb-3">
                                         <label for="InputPassword" class="form-label">密码</label>
