--- a/templates/info.html
+++ b/templates/info.html
@@ -53,23 +53,23 @@
                                     <div class="col-auto">
                                         <button type="button" class="btn btn-info" id="verification">发送验证码</button>
                                     </div>
-                                    <!-- <div class="mb-3">
-                                        <label for="InputPassword" class="form-label">密码</label>
-                                        <input type="password" class="form-control" id="InputPassword1">
-                                    </div> -->
+                                    <div class="mb-3">
+                                        <label for="InputPassword" class="form-label visually-hidden">原密码</label>
+                                        <input type="password" class="form-control" id="InputPassword" placeholder="原密码">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="InputNewPassword" class="form-label visually-hidden">密码</label>
+                                        <input type="password" class="form-control" id="InputNewPassword" placeholder="新密码">
+                                    </div>
                                     <!-- <div class="mb-3">
                                         <label for="Inputphonenumber" class="form-label">手机号</label>
                                         <input type="phonenumber" class="form-control" id="Inputphonenumber" value="{{ .phone }}">
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label for="InputPassword" class="form-label">重复密码</label>
-                                        <input type="password" class="form-control" id="InputPassword2">
                                     </div> -->
+
+
                                     <div class="col-4">
-                                        <button type="submit" class="btn btn-primary">下一步</button>
+                                        <button type="submit" class="btn btn-primary">修改密码</button>
                                     </div>
-                                    
                                 </form>
                             </div>
                         </div>
